--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Andre Hoffmann(phi) <andre.hoffmann@meta.com.br>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "unpack": "node unpack.js"
+  }
 }
